Criação da tela de Cadastro de Veículos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DriverPay - Controle Financeiro</title>
 
-    <meta name="theme-color" content="#2563eb" />
+    <meta name="theme-color" content="#0057FF" />
     <link rel="manifest" href="/manifest.webmanifest" />
 
     <meta name="description" content="App de controle financeiro para motoristas de aplicativos como Uber, 99 e iFood" />
@@ -14,8 +14,8 @@
     <meta property="og:title" content="DriverPay - Controle Financeiro" />
     <meta property="og:description" content="App de controle financeiro para motoristas de aplicativos como Uber, 99 e iFood" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://motoristai-qzpo-dualite.netlify.app" />
-    <meta property="og:image" content="https://ibb.co/67X3xfSV" />
+    <meta property="og:url" content="https://motoristai-wjjz-dualite.netlify.app" />
+    <meta property="og:image" content="https://d33wubrfki0l68.cloudfront.net/68ee4c372ba1b44c46adcad9/screenshot_2025-10-14-13-13-00-0000.webp" />
     <meta property="og:image:width" content="960" />
     <meta property="og:image:height" content="600" />
     <meta property="og:image:alt" content="Screenshot do DriverPay App" />
@@ -24,9 +24,9 @@
     <meta name="twitter:title" content="DriverPay - Controle Financeiro" />
     <meta name="twitter:description" content="App de controle financeiro para motoristas de aplicativos como Uber, 99 e iFood" />
     <meta name="twitter:site" content="@dualitedev" />
-    <meta name="twitter:image" content="https://ibb.co/67X3xfSV" />
+    <meta name="twitter:image" content="https://d33wubrfki0l68.cloudfront.net/68ee4c372ba1b44c46adcad9/screenshot_2025-10-14-13-13-00-0000.webp" />
 
-    <link rel="canonical" href="https://motoristai-qzpo-dualite.netlify.app" />
+    <link rel="canonical" href="https://motoristai-wjjz-dualite.netlify.app" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://i.ibb.co/HLfD5wgf/dualite-favicon.png" />
 
     <script type="application/ld+json">
@@ -34,7 +34,7 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "DriverPay",
-        "url": "https://motoristai-qzpo-dualite.netlify.app",
+        "url": "https://motoristai-wjjz-dualite.netlify.app",
         "description": "App de controle financeiro para motoristas de aplicativos como Uber, 99 e iFood",
         "publisher": {
           "@type": "Organization",
@@ -43,7 +43,7 @@
       }
     </script>
   </head>
-  <body class="bg-slate-50">
+  <body class="bg-bg-secondary">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
