--- a/index.html
+++ b/index.html
@@ -3,47 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DriverPay - Controle Financeiro</title>
+    <title>MotoristAI - Controle Financeiro</title>
 
-    <meta name="theme-color" content="#2563eb" />
+    <meta name="theme-color" content="#0057FF" />
     <link rel="manifest" href="/manifest.webmanifest" />
 
     <meta name="description" content="App de controle financeiro para motoristas de aplicativos como Uber, 99 e iFood" />
-    <meta name="author" content="DriverPay" />
+    <meta name="author" content="MotoristAI" />
 
-    <meta property="og:title" content="DriverPay - Controle Financeiro" />
+    <meta property="og:title" content="MotoristAI - Controle Financeiro" />
     <meta property="og:description" content="App de controle financeiro para motoristas de aplicativos como Uber, 99 e iFood" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://motoristai-qzpo-dualite.netlify.app" />
-    <meta property="og:image" content="https://ibb.co/67X3xfSV" />
-    <meta property="og:image:width" content="960" />
-    <meta property="og:image:height" content="600" />
-    <meta property="og:image:alt" content="Screenshot do DriverPay App" />
+    <meta property="og:url" content="https://motoristai-wjjz-dualite.netlify.app" />
+    <meta property="og:image" content="https://i.ibb.co/D8Bf2rN/motoristai-og.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Visualização do App MotoristAI" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="DriverPay - Controle Financeiro" />
+    <meta name="twitter:title" content="MotoristAI - Controle Financeiro" />
     <meta name="twitter:description" content="App de controle financeiro para motoristas de aplicativos como Uber, 99 e iFood" />
     <meta name="twitter:site" content="@dualitedev" />
-    <meta name="twitter:image" content="https://ibb.co/67X3xfSV" />
+    <meta name="twitter:image" content="https://i.ibb.co/D8Bf2rN/motoristai-og.png" />
 
-    <link rel="canonical" href="https://motoristai-qzpo-dualite.netlify.app" />
+    <link rel="canonical" href="https://motoristai-wjjz-dualite.netlify.app" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://i.ibb.co/HLfD5wgf/dualite-favicon.png" />
 
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "DriverPay",
-        "url": "https://motoristai-qzpo-dualite.netlify.app",
+        "name": "MotoristAI",
+        "url": "https://motoristai-wjjz-dualite.netlify.app",
         "description": "App de controle financeiro para motoristas de aplicativos como Uber, 99 e iFood",
         "publisher": {
           "@type": "Organization",
-          "name": "DriverPay"
+          "name": "MotoristAI"
         }
       }
     </script>
   </head>
-  <body class="bg-slate-50">
+  <body class="bg-bg-secondary">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
