fix: Substituido logos quebrados por texto estilizado

--- a/landing/index.html
+++ b/landing/index.html
@@ -68,12 +68,10 @@
                     <div class="platforms">
                         <span>Funciona com:</span>
                         <div class="platform-logos">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/c/cc/Uber_logo_2018.png" alt="Uber"
-                                class="platform-logo">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/99_logo.png/600px-99_logo.png"
-                                alt="99" class="platform-logo">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/IFood_logo.svg/2560px-IFood_logo.svg.png"
-                                alt="iFood" class="platform-logo">
+                            <span class="platform-name">Uber</span>
+                            <span class="platform-name">99</span>
+                            <span class="platform-name">iFood</span>
+                            <span class="platform-name">Rappi</span>
                         </div>
                     </div>
                 </div>
@@ -234,7 +232,8 @@
                     <h3 style="font-size: 1.25rem; font-weight: 700; color: #1e293b; margin-bottom: 0.75rem;">A IA
                         Calcula Tudo</h3>
                     <p style="color: #64748b;">Combustível, IPVA, seguro, manutenção, depreciação...
-                        <strong>Automaticamente</strong>.</p>
+                        <strong>Automaticamente</strong>.
+                    </p>
                 </div>
                 <div style="text-align: center; padding: 2rem;">
                     <div
