feat: Menu mobile com links para Planos, Depoimentos e FAQ

--- a/landing/index.html
+++ b/landing/index.html
@@ -47,6 +47,13 @@
                     <span></span>
                 </button>
             </div>
+            <!-- Mobile Menu -->
+            <nav class="mobile-nav">
+                <a href="#planos">💰 Planos</a>
+                <a href="#depoimentos">⭐ Depoimentos</a>
+                <a href="#faq">❓ Perguntas Frequentes</a>
+                <a href="#planos" class="btn btn-success mobile-cta">🚀 Começar Agora</a>
+            </nav>
         </div>
     </header>
 
