--- a/landing/index.html
+++ b/landing/index.html
@@ -30,10 +30,10 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <div class="logo">
+                <a href="#" class="logo">
                     <span class="logo-icon">🚗</span>
                     <span class="logo-text">MotoristAI</span>
-                </div>
+                </a>
                 <nav class="nav">
                     <a href="#funcionalidades">Funcionalidades</a>
                     <a href="#planos">Planos</a>
